# DSA-Models-USP

./: .gitignore  Exemplo.R  pyproject.toml
20250509 Fundamentos de Estatística/: Planilha Suporte - Fundamentos de Estatisticaxlsx Portugues.xlsx
20250521 Intro Python/: (3) SCRIPT - Tradutor de Comentários.py
20250603 Business Intelligence e Data Visualization/: A3_Chamados.pbix  Faturamento Ano.xlsx  Painel Analítico_Glicose.pbix  Perdas Assalto.xlsx  Perdas por Tipo.xlsx  a2_Colaboradores.pbix  a3_Colaboradores.pbix  a3_Vendas.pbix  spotify.xlsx  supermarket_inventory.txt
20250624 Engenharia de Dados/: aula-3.sql  aula-3sql Portugues.sql  banco-1.sql  reference_atual.sql
20250805 Computação Evolucionária/: 0_Solver_Excel_Problema da Ração_Exemplo 2.1_Arenales (2007).xlsx  1_Problema da Ração_v1_pulp.py  1_Problema da Ração_v2_cvxpy.py  1_Problema da Ração_v3_AG.py  2_AG_Problema da Mochila_v1_pygad.py  2_AG_Problema da Mochila_v2_pygad_SELEÇÃO.py  2_AG_Problema da Mochila_v3_pygad_CROSSOVER.py  2_AG_Problema da Mochila_v4_pygad_MUTAÇÃO.py  2_AG_Problema da Mochila_v5_pygad_ELITISMO.py  2_AG_Problema da Mochila_v6_pygad_COMENTADO.py  2_AG_Problema da Mochila_v7_manual_torneio.py  2_AG_Problema da Mochila_v8_manual_roleta.py  3_2D_Funcao_Teste_Nao_Linear_AG.py  4_Caixeiro Viajante_AG_pygad.py  4_Solver_Excel_Caixeiro Viajante_Exemplo 6.4_Belfiore e Fávero (2012).xlsx
20260602 Data Wrangling/: (1.1) Script Data Wrangling.py  (2.2) Script WDI World Bank.py  (3.1) Script CVM.py  (4.1) Script Jogos Copa.py  (5.1) Script Streaming.py
(+3 files in other folders)
